// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandBar renders while status is <Completed> 1`] = `
<StyledCommandBarBase
  className="commandBar"
  farItems={
    Array [
      Object {
        "ariaLabel": "settings",
        "className": "menuItemButton",
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        },
        "key": "settings",
        "onClick": [Function],
      },
    ]
  }
  items={
    Array [
      Object {
        "className": "menuItemButton",
        "disabled": false,
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        },
        "key": "startOver",
        "name": "Start over",
        "onClick": [Function],
      },
    ]
  }
/>
`;

exports[`CommandBar renders while status is <Default> 1`] = `
<StyledCommandBarBase
  className="commandBar"
  farItems={
    Array [
      Object {
        "ariaLabel": "settings",
        "className": "menuItemButton",
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        },
        "key": "settings",
        "onClick": [Function],
      },
    ]
  }
  items={
    Array [
      Object {
        "className": "menuItemButton",
        "disabled": false,
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        },
        "key": "startOver",
        "name": "Start over",
        "onClick": [Function],
      },
    ]
  }
/>
`;

exports[`CommandBar renders while status is <Failed> 1`] = `
<StyledCommandBarBase
  className="commandBar"
  farItems={
    Array [
      Object {
        "ariaLabel": "settings",
        "className": "menuItemButton",
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        },
        "key": "settings",
        "onClick": [Function],
      },
    ]
  }
  items={
    Array [
      Object {
        "className": "menuItemButton",
        "disabled": false,
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        },
        "key": "startOver",
        "name": "Start over",
        "onClick": [Function],
      },
    ]
  }
/>
`;

exports[`CommandBar renders while status is <Scanning> 1`] = `
<StyledCommandBarBase
  className="commandBar"
  farItems={
    Array [
      Object {
        "ariaLabel": "settings",
        "className": "menuItemButton",
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Gear",
        },
        "key": "settings",
        "onClick": [Function],
      },
    ]
  }
  items={
    Array [
      Object {
        "className": "menuItemButton",
        "disabled": true,
        "iconProps": Object {
          "className": "buttonIcon",
          "iconName": "Refresh",
        },
        "key": "startOver",
        "name": "Start over",
        "onClick": [Function],
      },
    ]
  }
/>
`;
